--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="nav-container">
       <div class="nav-left">
         <div>
-        <img class="icon" src="/" width="25px"/>
+        <img class="icon" src="./images/icono-wp.png" width="25px"/>
         <button class="btn whatsapp">+1(786)304 2407</button>
         <button class="btn">Ingresar</button>
         </div>
